# dremio-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  release-please.yml  rust.yml
src/: lib.rs
tests/: lib.rs
