[package]
description = "Dremio Rust client"
edition = "2021"
license = "MIT"
name = "dremio-rs"
version = "0.2.1"
repository = "https://github.com/vrd83/dremio-rs"

[dependencies]
arrow = "57.2.0"
arrow-flight = { version = "57.2.0", features = ["flight-sql-experimental"] }
futures = "0.3.31"
parquet = "57.2.0"
thiserror = "2.0.18"
tonic = "0.14.2"

[dev-dependencies]
testcontainers = "0.26.3"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.13.1"
