[package]
description = "Dremio Rust client"
edition = "2021"
license = "MIT"
name = "dremio-rs"
version = "0.2.7"
repository = "https://github.com/foss-v/dremio-rs"

[dependencies]
arrow = "58.0.0"
arrow-flight = { version = "57.3.0", features = ["flight-sql-experimental"] }
futures = "0.3.32"
parquet = "57.3.0"
thiserror = "2.0.18"
tonic = "0.14.5"

[dev-dependencies]
testcontainers = "0.27.1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = "0.13.2"
